<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_marginTop="30dp"
        android:textSize="24sp"
        android:id="@+id/welcome_txt"
        style="@style/TextView"
        android:text="@string/welcome"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
    <TextView
        android:id="@+id/sw_txt"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="25dp"
        android:textSize="48sp"
        style="@style/TextView.SW"
        android:gravity="center"
        android:lineSpacingMultiplier="1.1"
        android:text="@string/welcome_app_title"
        app:layout_constraintTop_toBottomOf="@id/welcome_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/horizontal_page_margin"
        android:layout_marginEnd="@dimen/horizontal_page_margin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sw_txt">
        <TextView
            android:id="@+id/select_txt"
            style="@style/TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/select_visualization"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/half_guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintGuide_percent="0.5"
            android:orientation="vertical" />
        <Button
            android:id="@+id/list_btn"
            android:layout_marginTop="24dp"
            android:text="@string/select_visualization_list"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@id/half_guideline"
            app:layout_constraintTop_toBottomOf="@id/select_txt"
            style="@style/Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:id="@+id/grid_btn"
            android:layout_marginTop="24dp"
            android:text="@string/select_visualization_grid"
            app:layout_constraintStart_toEndOf="@id/half_guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/select_txt"
            style="@style/Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>