<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:background="@color/black" >
    <com.google.android.material.appbar.MaterialToolbar
        android:elevation="18dp"
        android:id="@+id/toolbar"
        android:background="@color/black"
        app:navigationIcon="@drawable/ic_arrow_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/toolbarTitle_txt"
            android:textColor="@color/colorPrimary"
            android:maxLines="1"
            android:textSize="32sp"
            app:autoSizeTextType="uniform"
            app:autoSizeMinTextSize="14sp"
            app:autoSizeMaxTextSize="32sp"
            tools:text="Luke Skywalker"
            style="@style/TextView.Bold"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.appbar.MaterialToolbar>
    <androidx.core.widget.NestedScrollView
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="18dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <com.google.android.material.imageview.ShapeableImageView
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="@id/vertical_guideline"
                    android:id="@+id/avatar_img"
                    android:background="@color/colorAccent"
                    app:shapeAppearanceOverlay="@style/RoundedImageView"
                    tools:srcCompat="@drawable/ic_placeholder"
                    android:layout_gravity="center_horizontal"
                    android:layout_width="@dimen/detail_avatarSize"
                    android:layout_height="@dimen/detail_avatarSize"/>
                <LinearLayout
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toEndOf="@id/vertical_guideline"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_marginTop="10dp"
                        android:layout_marginStart="@dimen/horizontal_page_margin"
                        android:text="@string/detail_birth_year"
                        android:id="@+id/birthYear_txt"
                        style="@style/TextView.Detail"
                        android:textColor="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="@dimen/horizontal_page_margin"
                        android:text="@string/detail_gender"
                        android:id="@+id/gender_txt"
                        style="@style/TextView.Detail"
                        android:textColor="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="@dimen/horizontal_page_margin"
                        android:text="@string/detail_height"
                        android:id="@+id/height_txt"
                        style="@style/TextView.Detail"
                        android:textColor="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="@dimen/horizontal_page_margin"
                        android:text="@string/detail_weight"
                        android:id="@+id/weight_txt"
                        style="@style/TextView.Detail"
                        android:textColor="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="@dimen/horizontal_page_margin"
                        android:text="@string/detail_eye_color"
                        android:id="@+id/eyeColor_txt"
                        style="@style/TextView.Detail"
                        android:textColor="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="@dimen/horizontal_page_margin"
                        android:text="@string/detail_skin_color"
                        android:id="@+id/skinColor_txt"
                        style="@style/TextView.Detail"
                        android:textColor="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                    <TextView
                        android:layout_marginTop="5dp"
                        android:layout_marginStart="@dimen/horizontal_page_margin"
                        android:text="@string/detail_hair_color"
                        android:id="@+id/hairColor_txt"
                        style="@style/TextView.Detail"
                        android:textColor="@color/colorAccent"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/vertical_guideline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_constraintGuide_percent="0.5" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/detail_film"
                    android:id="@+id/headerFilm_txt"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextView"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/headerFilm_txt"
                    app:layout_constraintTop_toTopOf="@id/headerFilm_txt"
                    app:layout_constraintBottom_toBottomOf="@id/headerFilm_txt"
                    android:background="@color/grey"
                    android:layout_marginStart="@dimen/horizontal_page_margin"
                    android:layout_marginEnd="15dp"
                    android:layout_width="0dp"
                    android:layout_height="1dp" />
                <View
                    app:layout_constraintStart_toEndOf="@id/headerFilm_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/headerFilm_txt"
                    app:layout_constraintBottom_toBottomOf="@id/headerFilm_txt"
                    android:background="@color/grey"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="@dimen/horizontal_page_margin"
                    android:layout_width="0dp"
                    android:layout_height="1dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <ProgressBar
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/films_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:id="@+id/films_rv"
                tools:listitem="@layout/holder_film"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:gravity="center_horizontal"
                android:id="@+id/filmError_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/horizontal_page_margin"
                    android:layout_marginEnd="@dimen/horizontal_page_margin"
                    style="@style/TextView"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:text="@string/generic_error_message" />
                <Button
                    style="@style/Button"
                    android:id="@+id/retryFilm_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/retry_loading"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/error_txt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </LinearLayout>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="15dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:text="@string/detail_vehicles"
                    android:id="@+id/headerVehicles_txt"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    style="@style/TextView"
                    android:textColor="@color/colorAccent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <View
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/headerVehicles_txt"
                    app:layout_constraintTop_toTopOf="@id/headerVehicles_txt"
                    app:layout_constraintBottom_toBottomOf="@id/headerVehicles_txt"
                    android:background="@color/grey"
                    android:layout_marginStart="@dimen/horizontal_page_margin"
                    android:layout_marginEnd="15dp"
                    android:layout_width="0dp"
                    android:layout_height="1dp" />
                <View
                    app:layout_constraintStart_toEndOf="@id/headerVehicles_txt"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@id/headerVehicles_txt"
                    app:layout_constraintBottom_toBottomOf="@id/headerVehicles_txt"
                    android:background="@color/grey"
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="@dimen/horizontal_page_margin"
                    android:layout_width="0dp"
                    android:layout_height="1dp" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <ProgressBar
                android:visibility="gone"
                tools:visibility="visible"
                android:layout_margin="20dp"
                android:layout_gravity="center_horizontal"
                android:id="@+id/vehicles_pb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <androidx.recyclerview.widget.RecyclerView
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                android:orientation="horizontal"
                android:id="@+id/vehicles_rv"
                tools:listitem="@layout/holder_vehicle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
            <LinearLayout
                android:gravity="center_horizontal"
                android:id="@+id/vehicleError_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="@dimen/horizontal_page_margin"
                    android:layout_marginEnd="@dimen/horizontal_page_margin"
                    style="@style/TextView"
                    android:textColor="@color/colorAccent"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:textSize="14sp"
                    android:layout_height="wrap_content"
                    android:text="@string/generic_error_message" />
                <Button
                    style="@style/Button"
                    android:id="@+id/retryVehicle_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/retry_loading"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/error_txt"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>
            </LinearLayout>
            <TextView
                android:layout_margin="@dimen/horizontal_page_margin"
                android:visibility="gone"
                tools:visibility="visible"
                android:id="@+id/noVehicles_txt"
                android:textColor="@color/grey"
                android:text="@string/no_vehicles_driven"
                style="@style/TextView.Bold"
                android:layout_gravity="center_vertical"
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>